--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -4,22 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:alpha="1"
-    tools:context=".presentation.firstfragment.FirstFragment">
+    tools:context=".presentation.first.FirstFragment">
 
 
-    <ImageView
-        android:id="@+id/imageBackground"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitXY"
-        android:src="@drawable/background"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView3"
@@ -67,6 +56,7 @@
         android:layout_marginEnd="5dp"
         android:backgroundTint="@color/card_view_tint"
         app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView1">
@@ -90,13 +80,58 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="%"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/humidityData"
+                app:layout_constraintStart_toEndOf="@+id/humidityData"
+                app:layout_constraintTop_toTopOf="@+id/humidityData" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" kph"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/windSpeedData"
+                app:layout_constraintStart_toEndOf="@+id/windSpeedData"
+                app:layout_constraintTop_toTopOf="@+id/windSpeedData"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" km"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/visibilityData"
+                app:layout_constraintStart_toEndOf="@+id/visibilityData"
+                app:layout_constraintTop_toTopOf="@+id/visibilityData" />
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" mm"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/precipationData"
+                app:layout_constraintStart_toEndOf="@+id/precipationData"
+                app:layout_constraintTop_toTopOf="@+id/precipationData" />
+
+            <TextView
                 android:id="@+id/humidityData"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="serif"
-                android:text="81%"
+                android:text="81"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textHumidity"
@@ -122,7 +157,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="serif"
-                android:text="1 mm"
+                android:text="1"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textPrecipation"
@@ -148,7 +183,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="serif"
-                android:text="6 kph"
+                android:text="6"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textWindSpeed"
@@ -174,7 +209,7 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:fontFamily="serif"
-                android:text="0.4 km"
+                android:text="0.4"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textVisibility"
@@ -199,11 +234,22 @@
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="20dp"
                 android:fontFamily="serif"
-                android:text="1019 mbar"
+                android:text="1019"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textPressure"
                 app:layout_constraintTop_toBottomOf="@+id/textVisibility" />
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=" mbar"
+                android:textColor="#000000"
+                android:textSize="16sp"
+                app:layout_constraintBottom_toBottomOf="@+id/pressureData"
+                app:layout_constraintStart_toEndOf="@+id/pressureData"
+                app:layout_constraintTop_toTopOf="@+id/pressureData" />
 
             <TextView
                 android:id="@+id/textWindDirection"
@@ -257,66 +303,38 @@
                 android:id="@+id/citynameData"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="110dp"
                 android:fontFamily="serif"
                 android:text="London"
                 android:textColor="#000000"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/tempNowData"
-                app:layout_constraintStart_toStartOf="@+id/tempNowData"
-                app:layout_constraintTop_toBottomOf="@+id/countrynameData" />
+                app:layout_constraintEnd_toEndOf="@+id/textTimeData"
+                app:layout_constraintStart_toStartOf="@+id/textTimeData"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/countrynameData"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="70dp"
                 android:fontFamily="serif"
                 android:text="United Kingdom"
                 android:textColor="#000000"
                 android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="@+id/citynameData"
-                app:layout_constraintStart_toStartOf="@+id/citynameData"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/imageWeather"
                 android:layout_width="65dp"
                 android:layout_height="65dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="98dp"
                 android:src="@drawable/ic_launcher_foreground"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/timeData"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginEnd="16dp"
-                android:fontFamily="serif"
-                android:text="15 Jun 2023 / 20:15"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tempNowData"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="185dp"
-                android:fontFamily="serif"
-                android:text="20°C"
-                android:textColor="#000000"
-                android:textSize="48sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageWeather"
-                app:layout_constraintTop_toBottomOf="@+id/citynameData" />
 
             <TextView
                 android:id="@+id/skyStateData"
@@ -326,36 +344,116 @@
                 android:fontFamily="serif"
                 android:text="Sunny"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="11sp"
                 app:layout_constraintEnd_toEndOf="@+id/imageWeather"
                 app:layout_constraintStart_toStartOf="@+id/imageWeather"
                 app:layout_constraintTop_toBottomOf="@+id/imageWeather" />
 
             <TextView
-                android:id="@+id/tempMinData"
+                android:id="@+id/textTimeData"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="140dp"
                 android:fontFamily="serif"
-                android:text="12°C"
+                android:text="Last updated:"
                 android:textColor="#000000"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="@+id/tempNowData"
-                app:layout_constraintStart_toStartOf="@+id/tempNowData"
-                app:layout_constraintTop_toBottomOf="@+id/tempNowData" />
+                android:textSize="16sp"
+                app:layout_constraintBottom_toTopOf="@+id/timeData"
+                app:layout_constraintEnd_toEndOf="@+id/timeData"
+                app:layout_constraintStart_toStartOf="@+id/timeData"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/timeData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="serif"
+                android:text="15 Jun 2023 / 20:15"
+                android:textColor="#000000"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textTimeData" />
+
+            <TextView
+                android:id="@+id/tempNowData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="96dp"
+                android:fontFamily="serif"
+                android:text="20.0"
+                android:textColor="#000000"
+                android:textSize="34sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="°C"
+                android:textColor="#000000"
+                android:textSize="34sp"
+                app:layout_constraintBottom_toBottomOf="@+id/tempNowData"
+                app:layout_constraintStart_toEndOf="@+id/tempNowData"
+                app:layout_constraintTop_toTopOf="@+id/tempNowData" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="°C"
+                android:textColor="#000000"
+                app:layout_constraintBottom_toBottomOf="@+id/tempMaxData"
+                app:layout_constraintStart_toEndOf="@+id/tempMaxData"
+                app:layout_constraintTop_toTopOf="@+id/tempMaxData" />
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="°C"
+                android:textColor="#000000"
+                app:layout_constraintBottom_toBottomOf="@+id/tempMinData"
+                app:layout_constraintStart_toEndOf="@+id/tempMinData"
+                app:layout_constraintTop_toTopOf="@+id/tempMinData" />
 
             <TextView
                 android:id="@+id/tempMaxData"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="11dp"
-                android:layout_marginEnd="60dp"
                 android:fontFamily="serif"
-                android:text="25°C"
+                android:text="25"
                 android:textColor="#000000"
                 android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/textMaxTemp"
+                app:layout_constraintTop_toBottomOf="@+id/textMaxTemp" />
+
+            <TextView
+                android:id="@+id/tempMinData"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="serif"
+                android:text="15"
+                android:textColor="#000000"
+                android:textSize="14sp"
+                app:layout_constraintStart_toStartOf="@+id/textMinTemp"
+                app:layout_constraintTop_toBottomOf="@+id/textMinTemp" />
+
+            <TextView
+                android:id="@+id/textMaxTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="40dp"
+                android:fontFamily="serif"
+                android:text="max:"
+                android:textColor="#000000"
+                android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="@+id/tempNowData"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="@+id/tempNowData"
                 app:layout_constraintTop_toBottomOf="@+id/tempNowData" />
 
@@ -363,47 +461,28 @@
                 android:id="@+id/textMinTemp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="59dp"
+                android:layout_marginTop="15dp"
                 android:fontFamily="serif"
                 android:text="min:"
                 android:textColor="#000000"
                 android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="@+id/tempNowData"
-                app:layout_constraintStart_toStartOf="@+id/tempNowData"
+                app:layout_constraintStart_toEndOf="@+id/tempNowData"
                 app:layout_constraintTop_toBottomOf="@+id/tempNowData" />
 
-            <TextView
-                android:id="@+id/textMaxTemp"
+            <SearchView
+                app:actionViewClass="android.support.v7.widget.SearchView"
+                android:id="@+id/searchBar"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="59dp"
-                android:fontFamily="serif"
-                android:text="max:"
-                android:textColor="#000000"
-                android:textSize="10sp"
-                app:layout_constraintEnd_toEndOf="@+id/tempNowData"
-                app:layout_constraintStart_toStartOf="@+id/tempNowData"
-                app:layout_constraintTop_toBottomOf="@+id/tempNowData" />
-
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="150dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp"
-                android:backgroundTint="#4D005309"
-                android:drawableLeft="@drawable/ic_search"
-                android:fontFamily="serif"
-                android:text="Search City"
-                android:textColor="#000000"
-                android:textColorHighlight="#000000"
-                android:textColorHint="#000000"
-                android:textSize="10sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/timeData"
-                app:layout_constraintStart_toStartOf="@+id/timeData"
-                app:layout_constraintTop_toBottomOf="@+id/timeData" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="15dp"
+                android:iconifiedByDefault="false"
+                android:queryHint="Enter City Name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
