--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -17,11 +17,9 @@
             android:id="@+id/skyStateImageFr"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_launcher_foreground" />
 
@@ -29,25 +27,34 @@
             android:id="@+id/dateDayFr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="25dp"
+            android:layout_marginEnd="10dp"
             android:fontFamily="serif"
             android:text="22/12/2023"
             android:textColor="#000000"
             android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="22/12/2023" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:text="°C"
+            android:textColor="#000000"
+            app:layout_constraintStart_toEndOf="@+id/maxTempFr"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/maxTempFr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="45dp"
             android:fontFamily="serif"
-            android:text="30°C"
+            android:text="30"
             android:textColor="#000000"
-            app:layout_constraintEnd_toEndOf="@+id/textMaxFr"
             app:layout_constraintStart_toStartOf="@+id/textMaxFr"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -55,24 +62,33 @@
             android:id="@+id/textMaxFr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="135dp"
+            android:layout_marginStart="150dp"
+            android:layout_marginTop="25dp"
             android:fontFamily="serif"
             android:text="@string/max"
             android:textColor="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/textView11"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:text="°C"
+            android:textColor="#000000"
+            app:layout_constraintStart_toEndOf="@+id/minTempFr"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/minTempFr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="45dp"
             android:fontFamily="serif"
-            android:text="18°C"
+            android:text="18"
             android:textColor="#000000"
-            app:layout_constraintEnd_toEndOf="@+id/textMinFr"
             app:layout_constraintStart_toStartOf="@+id/textMinFr"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,13 +96,12 @@
             android:id="@+id/textMinFr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="135dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="150dp"
             android:fontFamily="serif"
             android:text="@string/min"
             android:textColor="#000000"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="min:" />
 
@@ -94,12 +109,14 @@
             android:id="@+id/skyStateFr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="serif"
             android:text="Sunny"
             android:textColor="#000000"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/skyStateImageFr" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
