--- a/app/src/main/res/layout/fragment_future_days.xml
+++ b/app/src/main/res/layout/fragment_future_days.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.futuredaysfragment.FutureDaysFragment">
+    android:background="@drawable/background"
+    tools:context=".presentation.futuredays.FutureDaysFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcView"
